--- a/src/sass/imports/_nav.scss
+++ b/src/sass/imports/_nav.scss
@@ -5,36 +5,38 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  & li:nth-child(1){
-    color: #F380C5;
+  & ul, .footer__nav{
+    & li:nth-child(1){
+      color: #F380C5;
+    }
+    & li:nth-child(2){
+      color: #E51818;
+    }
+    & li:nth-child(3){
+      color: #FF8A00;
+    }
+    & li:nth-child(4){
+      color: #FFC700;
+    }
+    & li:nth-child(5){
+      color: #30BC65;
+    }
+    & li:nth-child(6){
+      color: #4D87E7;
+    }
+    & li:nth-child(7){
+      color: #8B55E4;
+    }
+    & li{
+      border-bottom: 3px solid #333;
+      padding-bottom: .25em;
+    }
+    & li:hover{
+      color:#fff;
+      border-bottom: 3px solid #fff;
+    }
   }
-  & li:nth-child(2){
-    color: #E51818;
-  }
-  & li:nth-child(3){
-    color: #FF8A00;
-  }
-  & li:nth-child(4){
-    color: #FFC700;
-  }
-  & li:nth-child(5){
-    color: #30BC65;
-  }
-  & li:nth-child(6){
-    color: #4D87E7;
-  }
-  & li:nth-child(7){
-    color: #8B55E4;
-  }
-  & li{
-    border-bottom: 3px solid #333;
-    padding-bottom: .25em;
-  }
-  & li:hover{
-    color:#fff;
-    border-bottom: 3px solid #fff;
-  }
+  
 
   &__button {
     width: 100%;
@@ -96,7 +98,7 @@
 
   &--dark {
     @include smaller-than-tablet{
-      padding: .5em 1em;
+      padding: .75em 1em;
     }
     background: #333;
     padding: 2em 1em;
